--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "vuepress": "^1.3.1"
+    "vuepress": "^1.3.1",
+    "vuepress-theme-bootstrap": "^0.0.0-1"
   },
   "scripts": {
     "dev": "vuepress dev src",
