--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "vuepress": "^1.3.1",
+    "vuepress": "^1.9.7",
     "vuepress-theme-bootstrap": "^0.0.0-1"
   },
   "scripts": {
     "dev": "vuepress dev src",
     "build": "vuepress build src"
-  }
+  },
+  "repository": "git@github.com:matsu-oyaji/matsu-oyaji-web-vp.git",
+  "author": "Hiroaki Yoshida <yoshidaster@linecorp.com>"
 }
