--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": ">=16.0.0 <20.0.0"
+  },
   "devDependencies": {
     "@vuepress/plugin-google-analytics": "^1.9.9",
     "vuepress": "^1.9.7",
